# sahan

./: Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  extract.py  manage.py  pyproject.toml  requirements.txt
conf/: django.env
nginx/: Dockerfile  nginx.conf
sahan/: settings.py  urls.py  wsgi.py
sahan/clips/: admin.py  apps.py  models.py  views.py
sahan/clips/migrations/: 0001_initial.py
sahan/locale/tr/LC_MESSAGES/: django.mo  django.po
